--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PromptShield – Advanced AI Detection & Encoding Tool</title>
+  <title>PromptShield – Advanced AI Detection & Encoding Tool 2025</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; margin: 20px; padding: 20px; }
     textarea { width: 100%; height: 200px; font-size: 14px; padding: 10px; }
