--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PromptShield – Advanced AI Detection & Encoding Tool 2025</title>
+  <title>PromptShield – Advanced AI Detection & Encoding Tool</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; margin: 20px; padding: 20px; }
     textarea { width: 100%; height: 200px; font-size: 14px; padding: 10px; }
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body onload="updateStrictnessDisplay()">
-  <h1>PromptShield – Advanced AI Detection & Encoding Tool</h1>
+  <h1>PromptShield – Advanced AI Detection & Encoding Tool 2025</h1>
 
   <div id="controls">
     <button onclick="switchMode('encode')">Encode Instructions</button>
