--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     label { font-size: 14px; margin-right: 10px; }
   </style>
 </head>
-<body onload="updateStrictnessDisplay()">
-  <h1>PromptShield – Advanced AI Detection & Encoding Tool 2025</h1>
+<body>
+  <h1>PromptShield – Advanced AI Detection & Encoding Tool</h1>
 
   <div id="controls">
-    <button onclick="switchMode('encode')">Encode Instructions</button>
-    <button onclick="switchMode('detect')">Detect AI Content</button>
+    <button id="tabEncode">Encode Instructions</button>
+    <button id="tabDetect">Detect AI Content</button>
     <label>
       Strictness:
-      <input id="strictnessSlider" type="range" min="0.5" max="2" step="0.1" value="1" oninput="updateStrictnessDisplay()">
+      <input id="strictnessSlider" type="range" min="0.5" max="2" step="0.1" value="1">
       <span id="strictnessValue">1.0</span>x
     </label>
   </div>
@@ -30,33 +30,63 @@
   <div id="encodeMode">
     <h2>Encode Teacher Instructions</h2>
     <textarea id="encodeInput" placeholder="Paste your instructions..."></textarea><br>
-    <button onclick="encodeText()">Encode</button>
-    <button onclick="copyOutput()">Copy to Clipboard</button>
+    <button id="btnEncode">Encode</button>
+    <button id="btnCopy">Copy to Clipboard</button>
     <div id="output"></div>
   </div>
 
   <div id="detectMode" style="display:none;">
     <h2>Detect AI Usage</h2>
     <textarea id="detectInput" placeholder="Paste student content..."></textarea><br>
-    <button onclick="startDetection()">Analyze</button>
-    <button onclick="clearDetect()">Clear</button>
-    <button onclick="exportReport()">Export Report</button>
+    <button id="btnAnalyze">Analyze</button>
+    <button id="btnClear">Clear</button>
+    <button id="btnExport">Export Report</button>
     <div id="spinner">🔄 Analyzing...</div>
     <div id="results"></div>
     <canvas id="scoreChart" width="800" height="600"></canvas>
   </div>
 
   <script>
-    // ---- Utilities ----
-    function normalizeText(text) {
-      return text
-        .replace(/[“”]/g, '"')
-        .replace(/[‘’]/g, "'")
-        .replace(/—/g, '-')
-        .replace(/&[a-z]+;/gi, '')
-        .trim();
-    }
+  document.addEventListener('DOMContentLoaded', () => {
+    // Element references
+    const tabEncode = document.getElementById('tabEncode');
+    const tabDetect = document.getElementById('tabDetect');
+    const encodeMode = document.getElementById('encodeMode');
+    const detectMode = document.getElementById('detectMode');
+    const strictnessSlider = document.getElementById('strictnessSlider');
+    const strictnessValue = document.getElementById('strictnessValue');
+    const btnEncode = document.getElementById('btnEncode');
+    const btnCopy = document.getElementById('btnCopy');
+    const btnAnalyze = document.getElementById('btnAnalyze');
+    const btnClear = document.getElementById('btnClear');
+    const btnExport = document.getElementById('btnExport');
+    const spinner = document.getElementById('spinner');
+    const output = document.getElementById('output');
+    const results = document.getElementById('results');
+    const scoreChart = document.getElementById('scoreChart');
+    let watermark = '';
 
+    // Tab switching
+    tabEncode.addEventListener('click', () => {
+      encodeMode.style.display = 'block';
+      detectMode.style.display = 'none';
+    });
+    tabDetect.addEventListener('click', () => {
+      encodeMode.style.display = 'none';
+      detectMode.style.display = 'block';
+    });
+
+    // Strictness slider display
+    strictnessValue.textContent = strictnessSlider.value;
+    strictnessSlider.addEventListener('input', () => {
+      strictnessValue.textContent = strictnessSlider.value;
+    });
+
+    // Utility functions
+    function normalizeText(text) {
+      return text.replace(/[“”]/g,'"').replace(/[‘’]/g,"'")
+        .replace(/—/g,'-').replace(/&[a-z]+;/gi,'').trim();
+    }
     function randomWatermark() {
       const chars = ['\u200B','\u200C','\u200D','\u2060'];
       let seq = '';
@@ -67,37 +97,31 @@
       return seq;
     }
 
-    // ---- Encoding (preserves full formatting) ----
-    let randomWM = randomWatermark();
-    function encodeText() {
-      randomWM = randomWatermark();
-      const input = document.getElementById('encodeInput').value;
-      const output = randomWM + "\n\n" + input + "\n\n" + randomWM;
-      document.getElementById('output').innerText = output;
-    }
+    // Encoding logic (preserves formatting)
+    btnEncode.addEventListener('click', () => {
+      watermark = randomWatermark();
+      const text = document.getElementById('encodeInput').value;
+      output.innerText = watermark + "\n\n" + text + "\n\n" + watermark;
+    });
+    btnCopy.addEventListener('click', () => {
+      navigator.clipboard.writeText(output.innerText).then(() => alert('Copied!'));
+    });
 
-    function copyOutput() {
-      navigator.clipboard.writeText(document.getElementById('output').innerText)
-        .then(() => alert('Copied!'));
+    // Helpers for detection
+    function countSyllables(w) {
+      w = w.toLowerCase();
+      if (w.length <= 3) return 1;
+      const m = w.match(/[aeiouy]{1,2}/g);
+      return m ? m.length : 1;
     }
-
-    // ---- Readability & Sentiment Helpers ----
-    function countSyllables(word) {
-      word = word.toLowerCase();
-      if (word.length <= 3) return 1;
-      const syl = word.match(/[aeiouy]{1,2}/g);
-      return syl ? syl.length : 1;
-    }
-
-    function fleschKincaid(text) {
-      const sentences = text.match(/[^.!?]+[.!?]/g) || [];
-      const words = text.split(/\s+/);
-      const syllables = words.reduce((sum, w) => sum + countSyllables(w), 0);
-      const ASL = sentences.length ? words.length / sentences.length : 0;
-      const ASW = words.length ? syllables / words.length : 0;
+    function fleschKincaid(txt) {
+      const sents = txt.match(/[^.!?]+[.!?]/g) || [];
+      const words = txt.split(/\s+/);
+      const sylls = words.reduce((sum, w) => sum + countSyllables(w), 0);
+      const ASL = sents.length ? words.length / sents.length : 0;
+      const ASW = words.length ? sylls / words.length : 0;
       return 0.39 * ASL + 11.8 * ASW - 15.59;
     }
-
     function sentimentVariance(pars) {
       const pos = ['good','great','positive','strong','effective','successful','important'];
       const neg = ['weak','bad','problem','issue','difficult','fail','collapse'];
@@ -108,8 +132,8 @@
         return ws.length ? s/ws.length : 0;
       });
       if (scores.length < 2) return 1;
-      const mean = scores.reduce((a,b) => a+b,0)/scores.length;
-      return scores.reduce((a,b) => a + (b-mean)**2, 0)/scores.length;
+      const mean = scores.reduce((a,b)=>a+b,0)/scores.length;
+      return scores.reduce((a,b)=>a + (b-mean)**2,0)/scores.length;
     }
 
     // ---- Configurable Weights ----
@@ -135,20 +159,45 @@
 
     // ---- Detection Rules ----
     const RULES = [
-      { name: 'Watermark', key: 'Watermark', test: t => t.includes(randomWM), msg: '💧 Watermark detected.' },
+      { name: 'Watermark', key: 'Watermark', test: t => t.includes(watermark), msg: '💧 Watermark detected.' },
       { name: 'Few Contractions', key: 'FewContractions', test: t => (t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length < 4, msg: '🚫 Few contractions (formal tone)' },
       { name: 'Repetitive Structures', key: 'RepetitiveStructures', test: t => (t.match(/\b(One major reason|Another important cause|A third reason|In conclusion)\b/gi)||[]).length > 2, msg: '🔁 Repetitive essay structure' },
       { name: 'Excessive Transitions', key: 'ExcessiveTransitions', test: t => (t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length > 3, msg: '🌀 Frequent formal transitions' },
-      { name: 'Uniform Paragraphs', key: 'UniformParagraphs', test: t => { const ps = t.split(/\n+/).filter(p=>p.trim()), ls = ps.map(p=>p.split(/\s+/).length), avg = ls.reduce((a,b)=>a+b,0)/ls.length; return ls.length>2 && ls.every(l=>Math.abs(l-avg)<10); }, msg: '📏 Uniform paragraph lengths' },
+      { name: 'Uniform Paragraphs', key: 'UniformParagraphs', test: t => {
+          const ps = t.split(/\n+/).filter(p=>p.trim());
+          const ls = ps.map(p=>p.split(/\s+/).length);
+          const avg = ls.reduce((a,b)=>a+b,0)/ls.length;
+          return ls.length>2 && ls.every(l=>Math.abs(l-avg)<10);
+        }, msg: '📏 Uniform paragraph lengths' },
       { name: 'No Personal Voice', key: 'NoPersonalVoice', test: t => (t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length < 2, msg: '🙅‍♂️ Lack of personal voice' },
-      { name: 'Numeric Density', key: 'NumericDensity', test: t => { const nums = t.match(/\b\d+(?:\.\d+)?%?\b/g)||[]; return nums.length > t.split(/\s+/).length * 0.03; }, msg: '🔢 High numeric reference density' },
+      { name: 'Numeric Density', key: 'NumericDensity', test: t => {
+          const nums = t.match(/\b\d+(?:\.\d+)?%?\b/g)||[];
+          return nums.length > t.split(/\s+/).length * 0.03;
+        }, msg: '🔢 High numeric reference density' },
       { name: 'Opinion Insertion', key: 'OpinionInsertion', test: t => (t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length > 0, msg: '🗣️ Forced opinion insertion' },
-      { name: 'Rhetorical Questions', key: 'RhetoricalQuestions', test: t => (t.match(/\?\s/g)||[]).length < 1, msg: '❓ Absence of questions—AI tends to avoid them' },
-      { name: 'Readability Score', key: 'ReadabilityScore', test: t => { const fk = fleschKincaid(t); return fk > 35 && fk < 60; }, msg: '📐 Readability in tighter AI range' },
-      { name: 'Low Lexical Diversity', key: 'LowLexicalDiversity', test: t => { const ws = t.split(/\s+/), uw = new Set(ws.map(w=>w.toLowerCase())); return uw.size/ws.length < 0.4; }, msg: '📊 Low lexical diversity' },
+      { name: 'Rhetorical Questions', key: 'RhetoricalQuestions', test: t => (t.match(/\?\s/g)||[]).length < 1, msg: '❓ Absence of questions—AI tends to avoid them' },  
+      { name: 'Readability Score', key: 'ReadabilityScore', test: t => {
+          const fk = fleschKincaid(t);
+          return fk > 35 && fk < 60;
+        }, msg: '📐 Readability in tighter AI range' },
+      { name: 'Low Lexical Diversity', key: 'LowLexicalDiversity', test: t => {
+          const ws = t.split(/\s+/), uw = new Set(ws.map(w=>w.toLowerCase()));
+          return uw.size/ws.length < 0.4;
+        }, msg: '📊 Low lexical diversity' },
       { name: 'Passive Voice', key: 'PassiveVoice', test: t => (t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length > 2, msg: '🎭 Frequent passive voice' },
-      { name: 'N-gram Repetition', key: 'NgramRepetition', test: t => { const ws = t.split(/\s+/), tr = {}; for (let i=0; i<ws.length-2; i++){ const g = ws[i]+' '+ws[i+1]+' '+ws[i+2]; tr[g] = (tr[g]||0)+1; if (tr[g] > 2) return true; } return false; }, msg: '🔂 Repeated trigrams' },
-      { name: 'Sentiment Uniformity', key: 'SentimentUniformity', test: t => { const ps = t.split(/\n+/).filter(p=>p.trim()); return sentimentVariance(ps) < 0.002; }, msg: '⚖️ Uniform sentiment across paragraphs' },
+      { name: 'N-gram Repetition', key: 'NgramRepetition', test: t => {
+          const ws = t.split(/\s+/), tr = {};
+          for (let i = 0; i < ws.length-2; i++){
+            const g = ws[i]+' '+ws[i+1]+' '+ws[i+2];
+            tr[g] = (tr[g]||0)+1;
+            if (tr[g] > 2) return true;
+          }
+          return false;
+        }, msg: '🔂 Repeated trigrams' },
+      { name: 'Sentiment Uniformity', key: 'SentimentUniformity', test: t => {
+          const ps = t.split(/\n+/).filter(p=>p.trim());
+          return sentimentVariance(ps) < 0.002;
+        }, msg: '⚖️ Uniform sentiment across paragraphs' },
       { name: 'Hedge Words', key: 'HedgeWords', test: t => (t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length > 3, msg: '🔍 High hedging language' },
       { name: 'Emoji Usage', key: 'EmojiUsage', test: t => (t.match(/[😀-🙏]/g)||[]).length > 1, msg: '😊 Frequent emoji usage' },
       { name: 'Complex Punctuation', key: 'ComplexPunctuation', test: t => (t.match(/[;:,]/g)||[]).length > 5, msg: '✍️ Complex punctuation usage' }
@@ -156,67 +205,58 @@
 
     let reportData = {};
 
-    function updateStrictnessDisplay() {
-      document.getElementById('strictnessValue').innerText =
-        document.getElementById('strictnessSlider').value;
-    }
-
-    function switchMode(mode) {
-      document.getElementById('encodeMode').style.display = mode==='encode'?'block':'none';
-      document.getElementById('detectMode').style.display = mode==='detect'?'block':'none';
-    }
-
-    function startDetection() {
-      document.getElementById('spinner').style.display = 'block';
-      setTimeout(detectAI, 50);
-    }
-    function detectAI() {
-      const raw = document.getElementById('detectInput').value;
-      const text = normalizeText(raw);
-      document.getElementById('spinner').style.display = 'none';
-      const words = text.split(/\s+/).filter(w=>w);
-      if (words.length < 50) {
-        document.getElementById('results').innerText = 'Not enough data to judge.';
-        return;
-      }
-      const strict = parseFloat(document.getElementById('strictnessSlider').value);
-      let score=0, msgs=[], facts=[];
-      RULES.forEach(r=>{
-        if (r.test(text)) {
-          const w = WEIGHTS[r.key] * strict;
-          score += w; msgs.push(r.msg); facts.push({name:r.name,value:w});
+    // Analyze button
+    btnAnalyze.addEventListener('click', () => {
+      spinner.style.display = 'block';
+      setTimeout(() => {
+        spinner.style.display = 'none';
+        const raw = document.getElementById('detectInput').value;
+        const text = normalizeText(raw);
+        const words = text.split(/\s+/).filter(w=>w);
+        if (words.length < 50) {
+          results.textContent = 'Not enough data to judge.';
+          return;
         }
-      });
-      const finalScore = Math.min(10,score).toFixed(1);
-      const likelihood = score>5?'High':'Moderate';
-      reportData={score:finalScore,likelihood,details:facts};
-      document.getElementById('results').innerHTML =
-        `<strong>AI Match Score: ${finalScore}/10</strong><br>`+
-        `<strong>Likelihood:</strong> ${likelihood}`+
-        `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
-      renderChart(facts);
-    }
+        const strict = parseFloat(strictnessSlider.value);
+        let score = 0, msgs = [], facts = [];
+        RULES.forEach(r => {
+          if (r.test(text)) {
+            const w = WEIGHTS[r.key] * strict;
+            score += w; msgs.push(r.msg); facts.push({name:r.name,value:w});
+          }
+        });
+        const finalScore = Math.min(10,score).toFixed(1);
+        const likelihood = score > 5 ? 'High' : 'Moderate';
+        reportData = {score:finalScore,likelihood,details:facts};
+        results.innerHTML =
+          `<strong>AI Match Score: ${finalScore}/10</strong><br>` +
+          `<strong>Likelihood:</strong> ${likelihood}` +
+          `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
+        // render chart
+        const ctx = scoreChart.getContext('2d');
+        ctx.clearRect(0,0,800,600);
+        facts.forEach((f,i)=>{
+          ctx.fillStyle = '#4a90e2';
+          ctx.fillRect(200,i*40+20,f.value*40,25);
+          ctx.fillStyle = '#000';
+          ctx.fillText(`${f.name}: ${f.value.toFixed(1)}`,10,i*40+35);
+        });
+      }, 50);
+    });
 
-    function clearDetect() {
-      document.getElementById('detectInput').value='';
-      document.getElementById('results').innerHTML='';
-      document.getElementById('scoreChart').getContext('2d').clearRect(0,0,800,600);
-    }
-
-    function renderChart(facts) {
-      const ctx = document.getElementById('scoreChart').getContext('2d');
-      ctx.clearRect(0,0,800,600);
-      facts.forEach((f,i)=>{
-        ctx.fillStyle='#4a90e2'; ctx.fillRect(200,i*40+20,f.value*40,25);
-        ctx.fillStyle='#000'; ctx.fillText(`${f.name}: ${f.value.toFixed(1)}`,10,i*40+35);
-      });
-    }
-
-    function exportReport() {
+    // Clear and export
+    btnClear.addEventListener('click', () => {
+      document.getElementById('detectInput').value = '';
+      results.innerHTML = '';
+      scoreChart.getContext('2d').clearRect(0,0,800,600);
+    });
+    btnExport.addEventListener('click', () => {
       const blob = new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
       const url = URL.createObjectURL(blob);
-      const a = document.createElement('a'); a.href=url; a.download='ai_detection_report.json'; a.click(); URL.revokeObjectURL(url);
-    }
+      const a = document.createElement('a');
+      a.href = url; a.download = 'ai_detection_report.json'; a.click(); URL.revokeObjectURL(url);
+    });
+  });
   </script>
 </body>
 </html>
