--- a/index.html
+++ b/index.html
@@ -47,97 +47,60 @@
   </div>
 
   <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    // Element references
-    const tabEncode = document.getElementById('tabEncode');
-    const tabDetect = document.getElementById('tabDetect');
-    const encodeMode = document.getElementById('encodeMode');
-    const detectMode = document.getElementById('detectMode');
-    const strictnessSlider = document.getElementById('strictnessSlider');
-    const strictnessValue = document.getElementById('strictnessValue');
-    const btnEncode = document.getElementById('btnEncode');
-    const btnCopy = document.getElementById('btnCopy');
-    const btnAnalyze = document.getElementById('btnAnalyze');
-    const btnClear = document.getElementById('btnClear');
-    const btnExport = document.getElementById('btnExport');
-    const spinner = document.getElementById('spinner');
-    const output = document.getElementById('output');
-    const results = document.getElementById('results');
-    const scoreChart = document.getElementById('scoreChart');
-    let watermark = '';
+  (function() {
+    // Element refs
+    var tabEncode = document.getElementById('tabEncode');
+    var tabDetect = document.getElementById('tabDetect');
+    var encodeMode = document.getElementById('encodeMode');
+    var detectMode = document.getElementById('detectMode');
+    var strictnessSlider = document.getElementById('strictnessSlider');
+    var strictnessValue = document.getElementById('strictnessValue');
+    var btnEncode = document.getElementById('btnEncode');
+    var btnCopy = document.getElementById('btnCopy');
+    var btnAnalyze = document.getElementById('btnAnalyze');
+    var btnClear = document.getElementById('btnClear');
+    var btnExport = document.getElementById('btnExport');
+    var spinner = document.getElementById('spinner');
+    var output = document.getElementById('output');
+    var results = document.getElementById('results');
+    var scoreChart = document.getElementById('scoreChart');
 
     // Tab switching
-    tabEncode.addEventListener('click', () => {
+    tabEncode.onclick = function() {
       encodeMode.style.display = 'block';
       detectMode.style.display = 'none';
-    });
-    tabDetect.addEventListener('click', () => {
+    };
+    tabDetect.onclick = function() {
       encodeMode.style.display = 'none';
       detectMode.style.display = 'block';
-    });
+    };
 
-    // Strictness slider display
+    // Strictness slider
     strictnessValue.textContent = strictnessSlider.value;
-    strictnessSlider.addEventListener('input', () => {
+    strictnessSlider.oninput = function() {
       strictnessValue.textContent = strictnessSlider.value;
-    });
+    };
 
-    // Utility functions
+    // Utilities
     function normalizeText(text) {
-      return text.replace(/[“”]/g,'"').replace(/[‘’]/g,"'")
-        .replace(/—/g,'-').replace(/&[a-z]+;/gi,'').trim();
+      return text.replace(/[“”]/g,'"')
+                 .replace(/[‘’]/g,"'")
+                 .replace(/—/g,'-')
+                 .replace(/&[a-z]+;/gi,'')
+                 .trim();
     }
     function randomWatermark() {
-      const chars = ['\u200B','\u200C','\u200D','\u2060'];
-      let seq = '';
-      const len = 5 + Math.floor(Math.random()*10);
-      for (let i = 0; i < len; i++) {
+      var chars = ['\u200B','\u200C','\u200D','\u2060'];
+      var seq = '';
+      var len = 5 + Math.floor(Math.random()*10);
+      for (var i = 0; i < len; i++) {
         seq += chars[Math.floor(Math.random()*chars.length)];
       }
       return seq;
     }
 
-    // Encoding logic (preserves formatting)
-    btnEncode.addEventListener('click', () => {
-      watermark = randomWatermark();
-      const text = document.getElementById('encodeInput').value;
-      output.innerText = watermark + "\n\n" + text + "\n\n" + watermark;
-    });
-    btnCopy.addEventListener('click', () => {
-      navigator.clipboard.writeText(output.innerText).then(() => alert('Copied!'));
-    });
-
-    // Helpers for detection
-    function countSyllables(w) {
-      w = w.toLowerCase();
-      if (w.length <= 3) return 1;
-      const m = w.match(/[aeiouy]{1,2}/g);
-      return m ? m.length : 1;
-    }
-    function fleschKincaid(txt) {
-      const sents = txt.match(/[^.!?]+[.!?]/g) || [];
-      const words = txt.split(/\s+/);
-      const sylls = words.reduce((sum, w) => sum + countSyllables(w), 0);
-      const ASL = sents.length ? words.length / sents.length : 0;
-      const ASW = words.length ? sylls / words.length : 0;
-      return 0.39 * ASL + 11.8 * ASW - 15.59;
-    }
-    function sentimentVariance(pars) {
-      const pos = ['good','great','positive','strong','effective','successful','important'];
-      const neg = ['weak','bad','problem','issue','difficult','fail','collapse'];
-      const scores = pars.map(p => {
-        const ws = p.toLowerCase().split(/\W+/);
-        let s = 0;
-        ws.forEach(w => { if (pos.includes(w)) s++; if (neg.includes(w)) s--; });
-        return ws.length ? s/ws.length : 0;
-      });
-      if (scores.length < 2) return 1;
-      const mean = scores.reduce((a,b)=>a+b,0)/scores.length;
-      return scores.reduce((a,b)=>a + (b-mean)**2,0)/scores.length;
-    }
-
     // ---- Configurable Weights ----
-    const WEIGHTS = {
+    var WEIGHTS = {
       Watermark: 5,
       FewContractions: 2,
       RepetitiveStructures: 4.5,
@@ -157,106 +120,143 @@
       ComplexPunctuation: 1.5
     };
 
-    // ---- Detection Rules ----
-    const RULES = [
-      { name: 'Watermark', key: 'Watermark', test: t => t.includes(watermark), msg: '💧 Watermark detected.' },
-      { name: 'Few Contractions', key: 'FewContractions', test: t => (t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length < 4, msg: '🚫 Few contractions (formal tone)' },
-      { name: 'Repetitive Structures', key: 'RepetitiveStructures', test: t => (t.match(/\b(One major reason|Another important cause|A third reason|In conclusion)\b/gi)||[]).length > 2, msg: '🔁 Repetitive essay structure' },
-      { name: 'Excessive Transitions', key: 'ExcessiveTransitions', test: t => (t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length > 3, msg: '🌀 Frequent formal transitions' },
-      { name: 'Uniform Paragraphs', key: 'UniformParagraphs', test: t => {
-          const ps = t.split(/\n+/).filter(p=>p.trim());
-          const ls = ps.map(p=>p.split(/\s+/).length);
-          const avg = ls.reduce((a,b)=>a+b,0)/ls.length;
-          return ls.length>2 && ls.every(l=>Math.abs(l-avg)<10);
-        }, msg: '📏 Uniform paragraph lengths' },
-      { name: 'No Personal Voice', key: 'NoPersonalVoice', test: t => (t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length < 2, msg: '🙅‍♂️ Lack of personal voice' },
-      { name: 'Numeric Density', key: 'NumericDensity', test: t => {
-          const nums = t.match(/\b\d+(?:\.\d+)?%?\b/g)||[];
+    // Readability & sentiment helpers
+    function countSyllables(w) {
+      w = w.toLowerCase();
+      if (w.length <= 3) return 1;
+      var m = w.match(/[aeiouy]{1,2}/g);
+      return m ? m.length : 1;
+    }
+    function fleschKincaid(txt) {
+      var s = (txt.match(/[^.!?]+[.!?]/g)||[]).length;
+      var ws = txt.split(/\s+/);
+      var syl = ws.reduce(function(a,w){return a+countSyllables(w);},0);
+      var ASL = s ? ws.length/s : 0;
+      var ASW = ws.length ? syl/ws.length : 0;
+      return 0.39*ASL + 11.8*ASW - 15.59;
+    }
+    function sentimentVariance(pars) {
+      var pos = ['good','great','positive','strong','effective','successful','important'];
+      var neg = ['weak','bad','problem','issue','difficult','fail','collapse'];
+      var sc = pars.map(function(p){
+        var ws = p.toLowerCase().split(/\W+/);
+        var s=0;
+        ws.forEach(function(w){ if(pos.indexOf(w)>-1) s++; if(neg.indexOf(w)>-1) s--; });
+        return ws.length ? s/ws.length : 0;
+      });
+      if (sc.length < 2) return 1;
+      var mean = sc.reduce(function(a,b){return a+b;},0)/sc.length;
+      return sc.reduce(function(a,b){return a+(b-mean)*(b-mean);},0)/sc.length;
+    }
+
+    // Detection rules
+    var watermark = '';
+    var RULES = [
+      { name:'Watermark', key:'Watermark', test:function(t){return t.includes(watermark);}, msg:'💧 Watermark detected.' },
+      { name:'Few Contractions', key:'FewContractions', test:function(t){return (t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length < 4;}, msg:'🚫 Few contractions' },
+      { name:'Repetitive Structures', key:'RepetitiveStructures', test:function(t){return (t.match(/\b(One major reason|Another important cause|A third reason|In conclusion)\b/gi)||[]).length > 2;}, msg:'🔁 Repetitive structure' },
+      { name:'Excessive Transitions', key:'ExcessiveTransitions', test:function(t){return (t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length > 3;}, msg:'🌀 Excessive transitions' },
+      { name:'Uniform Paragraphs', key:'UniformParagraphs', test:function(t){
+          var ps=t.split(/\n+/).filter(function(p){return p.trim();});
+          var ls=ps.map(function(p){return p.split(/\s+/).length;});
+          var avg=ls.reduce(function(a,b){return a+b;},0)/ls.length;
+          return ls.length>2 && ls.every(function(l){return Math.abs(l-avg)<10;});
+        }, msg:'📏 Uniform paragraphs' },
+      { name:'No Personal Voice', key:'NoPersonalVoice', test:function(t){return (t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length < 2;}, msg:'🙅‍♂️ No personal voice' },
+      { name:'Numeric Density', key:'NumericDensity', test:function(t){
+          var nums=t.match(/\b\d+(?:\.\d+)?%?\b/g)||[];
           return nums.length > t.split(/\s+/).length * 0.03;
-        }, msg: '🔢 High numeric reference density' },
-      { name: 'Opinion Insertion', key: 'OpinionInsertion', test: t => (t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length > 0, msg: '🗣️ Forced opinion insertion' },
-      { name: 'Rhetorical Questions', key: 'RhetoricalQuestions', test: t => (t.match(/\?\s/g)||[]).length < 1, msg: '❓ Absence of questions—AI tends to avoid them' },  
-      { name: 'Readability Score', key: 'ReadabilityScore', test: t => {
-          const fk = fleschKincaid(t);
-          return fk > 35 && fk < 60;
-        }, msg: '📐 Readability in tighter AI range' },
-      { name: 'Low Lexical Diversity', key: 'LowLexicalDiversity', test: t => {
-          const ws = t.split(/\s+/), uw = new Set(ws.map(w=>w.toLowerCase()));
+        }, msg:'🔢 High numeric density' },
+      { name:'Opinion Insertion', key:'OpinionInsertion', test:function(t){return (t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length > 0;}, msg:'🗣️ Opinion insertion' },
+      { name:'Rhetorical Questions', key:'RhetoricalQuestions', test:function(t){return (t.match(/\?\s/g)||[]).length < 1;}, msg:'❓ No questions' },
+      { name:'Readability Score', key:'ReadabilityScore', test:function(t){var fk=fleschKincaid(t); return fk>35 && fk<60;}, msg:'📐 Readability range' },
+      { name:'Low Lexical Diversity', key:'LowLexicalDiversity', test:function(t){
+          var ws=t.split(/\s+/), uw=new Set(ws.map(function(w){return w.toLowerCase();}));
           return uw.size/ws.length < 0.4;
-        }, msg: '📊 Low lexical diversity' },
-      { name: 'Passive Voice', key: 'PassiveVoice', test: t => (t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length > 2, msg: '🎭 Frequent passive voice' },
-      { name: 'N-gram Repetition', key: 'NgramRepetition', test: t => {
-          const ws = t.split(/\s+/), tr = {};
-          for (let i = 0; i < ws.length-2; i++){
-            const g = ws[i]+' '+ws[i+1]+' '+ws[i+2];
-            tr[g] = (tr[g]||0)+1;
-            if (tr[g] > 2) return true;
+        }, msg:'📊 Low diversity' },
+      { name:'Passive Voice', key:'PassiveVoice', test:function(t){return (t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length > 2;}, msg:'🎭 Passive voice' },
+      { name:'N-gram Repetition', key:'NgramRepetition', test:function(t){
+          var ws=t.split(/\s+/), tr={};
+          for(var i=0;i<ws.length-2;i++){
+            var g=ws[i]+' '+ws[i+1]+' '+ws[i+2];
+            tr[g]=(tr[g]||0)+1;
+            if(tr[g]>2) return true;
           }
           return false;
-        }, msg: '🔂 Repeated trigrams' },
-      { name: 'Sentiment Uniformity', key: 'SentimentUniformity', test: t => {
-          const ps = t.split(/\n+/).filter(p=>p.trim());
-          return sentimentVariance(ps) < 0.002;
-        }, msg: '⚖️ Uniform sentiment across paragraphs' },
-      { name: 'Hedge Words', key: 'HedgeWords', test: t => (t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length > 3, msg: '🔍 High hedging language' },
-      { name: 'Emoji Usage', key: 'EmojiUsage', test: t => (t.match(/[😀-🙏]/g)||[]).length > 1, msg: '😊 Frequent emoji usage' },
-      { name: 'Complex Punctuation', key: 'ComplexPunctuation', test: t => (t.match(/[;:,]/g)||[]).length > 5, msg: '✍️ Complex punctuation usage' }
+        }, msg:'🔂 N-gram repetition' },
+      { name:'Sentiment Uniformity', key:'SentimentUniformity', test:function(t){
+          return sentimentVariance(t.split(/\n+/).filter(function(p){return p.trim();}))<0.002;
+        }, msg:'⚖️ Uniform sentiment' },
+      { name:'Hedge Words', key:'HedgeWords', test:function(t){return (t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length > 3;}, msg:'🔍 Hedge words' },
+      { name:'Emoji Usage', key:'EmojiUsage', test:function(t){return (t.match(/[😀-🙏]/g)||[]).length > 1;}, msg:'😊 Emoji usage' },
+      { name:'Complex Punctuation', key:'ComplexPunctuation', test:function(t){return (t.match(/[;:,]/g)||[]).length > 5;}, msg:'✍️ Complex punctuation' }
     ];
 
-    let reportData = {};
+    var reportData = {};
 
-    // Analyze button
-    btnAnalyze.addEventListener('click', () => {
+    // Encode
+    btnEncode.onclick = function() {
+      watermark = randomWatermark();
+      var text = document.getElementById('encodeInput').value;
+      output.innerText = watermark + "\n\n" + text + "\n\n" + watermark;
+    };
+    btnCopy.onclick = function() {
+      navigator.clipboard.writeText(output.innerText).then(function(){ alert('Copied!'); });
+    };
+
+    // Analyze
+    btnAnalyze.onclick = function() {
       spinner.style.display = 'block';
-      setTimeout(() => {
+      setTimeout(function() {
         spinner.style.display = 'none';
-        const raw = document.getElementById('detectInput').value;
-        const text = normalizeText(raw);
-        const words = text.split(/\s+/).filter(w=>w);
-        if (words.length < 50) {
+        var raw = document.getElementById('detectInput').value;
+        var text = normalizeText(raw);
+        var words = text.split(/\s+/).filter(function(w){return w;});
+        if(words.length<50){
           results.textContent = 'Not enough data to judge.';
           return;
         }
-        const strict = parseFloat(strictnessSlider.value);
-        let score = 0, msgs = [], facts = [];
-        RULES.forEach(r => {
-          if (r.test(text)) {
-            const w = WEIGHTS[r.key] * strict;
-            score += w; msgs.push(r.msg); facts.push({name:r.name,value:w});
+        var strict = parseFloat(strictnessSlider.value);
+        var score=0, msgs=[], facts=[];
+        RULES.forEach(function(r){
+          if(r.test(text)){
+            var w = WEIGHTS[r.key]*strict;
+            score+=w; msgs.push(r.msg); facts.push({name:r.name,value:w});
           }
         });
-        const finalScore = Math.min(10,score).toFixed(1);
-        const likelihood = score > 5 ? 'High' : 'Moderate';
+        var finalScore = Math.min(10,score).toFixed(1);
+        var likelihood = score>5?'High':'Moderate';
         reportData = {score:finalScore,likelihood,details:facts};
         results.innerHTML =
-          `<strong>AI Match Score: ${finalScore}/10</strong><br>` +
-          `<strong>Likelihood:</strong> ${likelihood}` +
-          `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
-        // render chart
-        const ctx = scoreChart.getContext('2d');
+          '<strong>AI Match Score: '+finalScore+'/10</strong><br>' +
+          '<strong>Likelihood:</strong> '+likelihood +
+          '<ul><li>'+msgs.join('</li><li>')+'</li></ul>';
+        // Chart
+        var ctx = scoreChart.getContext('2d');
         ctx.clearRect(0,0,800,600);
-        facts.forEach((f,i)=>{
-          ctx.fillStyle = '#4a90e2';
+        facts.forEach(function(f,i){
+          ctx.fillStyle='#4a90e2';
           ctx.fillRect(200,i*40+20,f.value*40,25);
-          ctx.fillStyle = '#000';
-          ctx.fillText(`${f.name}: ${f.value.toFixed(1)}`,10,i*40+35);
+          ctx.fillStyle='#000';
+          ctx.fillText(f.name+': '+f.value.toFixed(1),10,i*40+35);
         });
-      }, 50);
-    });
+      },50);
+    };
 
-    // Clear and export
-    btnClear.addEventListener('click', () => {
-      document.getElementById('detectInput').value = '';
-      results.innerHTML = '';
+    btnClear.onclick = function() {
+      document.getElementById('detectInput').value='';
+      results.innerHTML='';
       scoreChart.getContext('2d').clearRect(0,0,800,600);
-    });
-    btnExport.addEventListener('click', () => {
-      const blob = new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'ai_detection_report.json'; a.click(); URL.revokeObjectURL(url);
-    });
-  });
+    };
+
+    btnExport.onclick = function() {
+      var blob = new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
+      var url = URL.createObjectURL(blob);
+      var a = document.createElement('a');
+      a.href = url; a.download='ai_detection_report.json'; a.click();
+      URL.revokeObjectURL(url);
+    };
+  })();
   </script>
 </body>
 </html>
